tests/toy/neg/001684_mutation.toylang
program a = { while int do sleep; } .
